--- a/examples/Makefile.Web
+++ b/examples/Makefile.Web
@@ -468,7 +468,8 @@ SHADERS = \
     shaders/shaders_mesh_instancing \
     shaders/shaders_multi_sample2d \
     shaders/shaders_write_depth \
-    shaders/shaders_hybrid_render
+    shaders/shaders_hybrid_render \
+    shaders/shaders_deferred_shading
 
 AUDIO = \
     audio/audio_module_playing \
